--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -181,8 +181,8 @@
 
                 <article>
                     <h1>Course project and Portfolio </h1>
-                    <section id="FinalProjectAndPortfolio" data-hours="2" data-wip>
-                        <h3>Final Project and Portfolio</h3>
+                    <section id="FinalProject_FromIdeaToProduction" data-hours="2">
+                        <h3>Final Project: From Idea to Production</h3>
                         <ol>
                             <li>Selecting and planning your AI Assistant</li>
                             <li>Building the end-to-end ML lifecycle</li>
@@ -190,13 +190,20 @@
                             <li>Documentation, README, and project architecture</li>
                         </ol>
                     </section>
-                    <section id="PortfolioAndCvTips" data-hours="2" data-wip>
+                    <section id="PortfolioAndCvTips" data-hours="2">
                         <h3>Discuss your portfolio and CV tips</h3>
                         <ol>
                             <li>Building a compelling AI/ML Portfolio (GitHub, Personal Website)</li>
                             <li>CV best practices for AI Engineers in 2025/2026</li>
                             <li>LinkedIn optimization and networking</li>
                             <li>Interview preparation for AI roles</li>
+                        </ol>
+                    </section>
+                    <section id="AdvancedTopics_RAG_with_LangChain" data-hours="2"><h3>Advanced topics: RAG with LangChain</h3>
+                        <ol>
+                            <li>Introduction to RAG</li>
+                            <li>Building a RAG system with LangChain</li>
+                            <li>Testing and fine-tuning the RAG system</li>
                         </ol>
                     </section>
                 </article>
