--- a/pages/themes/PortfolioAndCvTips/PortfolioAndCvTips.html
+++ b/pages/themes/PortfolioAndCvTips/PortfolioAndCvTips.html
@@ -91,14 +91,14 @@
     </section>
 </section>
 
-<section class="main-section-title" id="CVBestPractices"><h1>CV Best Practices for AI (2025-2026)</h1></section>
-<section class="sub-sections"><h2>CV Best Practices for AI (2025-2026)</h2>
-    <section><h3>ATS-Friendly Optimization</h3>
+<section class="main-section-title" id="CVBestPractices"><h1>CV Best Practices for AI</h1></section>
+<section class="sub-sections"><h2>CV Best Practices for AI</h2>
+    <section>
         <dl class="fa" style="min-width:80vw">
             <dt>Recruiters spend 6 seconds on your CV. Use keywords wisely.</dt>
-            <dd><b>Keywords</b>: Python, LLMs, RAG, Prompt Engineering, MLOps, Scikit-learn, Transformers.</dd>
-            <dd><b>Measurable Impact</b>: "Improved chatbot response accuracy by 20% using better RAG architecture" > "Built a chatbot."</dd>
-            <dd><b>Tooling</b>: Mention experience with AI-assisted development (Vibe Coding, Cursor, etc.).</dd>
+            <dd><b>Keywords</b>: Python, LLMs, RAG, Prompt Engineering, Scikit-learn, Transformers.</dd>
+            <dt><b>Measurable Impact</b>: "Improved chatbot response accuracy by 20% using better RAG architecture" instead of "Built a chatbot."</dt>
+            <dt><b>Tooling</b>: Mention experience with AI-assisted development (Vibe Coding, Cursor, etc.).</dt>
         </dl>
     </section>
     <section><h3>The Hybrid Format</h3>
